--- a/Dockerfile_rails
+++ b/Dockerfile_rails
@@ -2,6 +2,11 @@ FROM ruby:alpine3.12
 
 # config home environment
 WORKDIR /app
+RUN apk update \
+  && apk upgrade \
+  && apk add --update --no-cache \
+  build-base curl curl-dev git postgresql-dev \
+  yaml-dev zlib-dev nodejs yarn
 
 RUN gem install bundler rake
 
