--- a/Dockerfile_rails
+++ b/Dockerfile_rails
@@ -6,8 +6,9 @@ RUN apk update \
   && apk upgrade \
   && apk add --update --no-cache \
   build-base curl curl-dev git postgresql-dev \
-  yaml-dev zlib-dev nodejs yarn
+  yaml-dev zlib-dev nodejs yarn tzdata
 
+# RUN apk add --update tzdata git ruby-dev libz-dev libiconv-hook1 libiconv-hook-dev
 RUN gem install bundler rake
 
 COPY ./app/Gemfile /app/Gemfile
