--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,6 +15,6 @@ blocks:
             - docker-compose up -d
             - 'docker-compose exec memory_app_back rake db:create'
             - 'docker-compose exec memory_app_back rake db:migrate'
-            - rm -rf app/tmp
+            - sudo rm -rf app/tmp
             - docker-compose exec memory_app_back rspec
             - docker-compose exec memory_app_back rspec
