Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,6 +13,9 @@ blocks:
             - checkout
             - docker-compose build
             - docker-compose up -d
-            - "docker-compose exec memory_app_back rake db:create"
-            - "docker-compose exec memory_app_back rake db:migrate"
+            - 'docker-compose exec memory_app_back rake db:create'
+            - 'docker-compose exec memory_app_back rake db:migrate'
             - docker-compose exec memory_app_back rspec
+      env_vars:
+        - name: CI_ENV
+          value: 'true'
