--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,7 +16,7 @@ blocks:
             - docker-compose up -d
             - "docker-compose exec memory_app_back rake db:create"
             - "docker-compose exec memory_app_back rake db:migrate"
-            - docker-compose exec memory_app_back rspec spec/requests/authentication_request_spec.rb:7
+            - docker-compose exec memory_app_back rspec spec/models/user_spec.rb
             - artifact push workflow app/coverage/.resultset.json -d result_1.json
   - name: "test 2"
     dependencies: []
@@ -29,7 +29,7 @@ blocks:
             - docker-compose up -d
             - "docker-compose exec memory_app_back rake db:create"
             - "docker-compose exec memory_app_back rake db:migrate"
-            - docker-compose exec memory_app_back rspec spec/requests/authentication_request_spec.rb:33
+            - docker-compose exec memory_app_back rspec spec/models/memory_spec.rb
             - artifact push workflow app/coverage/.resultset.json -d result_2.json
   - name: merge tests
     dependencies: ["test 1", "test 2"]
