--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -38,6 +38,7 @@ blocks:
         - name: merge tests
           commands:
             - checkout
+            - gem install simplecov json
             - artifact pull workflow result_1.json -d collect_coverage/input/resultset-1.json
             - artifact pull workflow result_2.json -d collect_coverage/input/resultset-2.json
             - cd collect_coverage
