--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,11 +1,11 @@
 version: v1.0
-name: Docker
+name: Docker-compose tests
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: "test 1"
+  - name: "rspec 1"
     dependencies: []
     task:
       jobs:
@@ -18,7 +18,7 @@ blocks:
             - "docker-compose exec memory_app_back rake db:migrate"
             - docker-compose exec memory_app_back rspec spec/models/user_spec.rb
             - artifact push workflow app/coverage/.resultset.json -d result_1.json
-  - name: "test 2"
+  - name: "rspec 2"
     dependencies: []
     task:
       jobs:
