--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,6 +13,7 @@ blocks:
           commands:
             - checkout
             - docker-compose build
+            - docker-compose bundle install
             - docker-compose up -d
             - "docker-compose exec memory_app_back rake db:create"
             - "docker-compose exec memory_app_back rake db:migrate"
@@ -26,6 +27,7 @@ blocks:
           commands:
             - checkout
             - docker-compose build
+            - docker-compose bundle install
             - docker-compose up -d
             - "docker-compose exec memory_app_back rake db:create"
             - "docker-compose exec memory_app_back rake db:migrate"
