--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,11 +5,11 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: "rspec 1"
+  - name: "rspec 1/2"
     dependencies: []
     task:
       jobs:
-        - name: rspec 1
+        - name: rspec 1/2
           commands:
             - checkout
             - docker-compose build
@@ -18,11 +18,11 @@ blocks:
             - "docker-compose exec memory_app_back rake db:migrate"
             - docker-compose exec memory_app_back rake spec:sliced[0,2]
             - artifact push workflow app/coverage/.resultset.json -d result_1.json
-  - name: "rspec 2"
+  - name: "rspec 2/2"
     dependencies: []
     task:
       jobs:
-        - name: rspec 2
+        - name: rspec 2/2
           commands:
             - checkout
             - docker-compose build
@@ -32,7 +32,7 @@ blocks:
             - docker-compose exec memory_app_back rake spec:sliced[1,2]
             - artifact push workflow app/coverage/.resultset.json -d result_2.json
   - name: merge tests
-    dependencies: ["rspec 1", "rspec 2"]
+    dependencies: ["rspec 1/2", "rspec 2/2"]
     task:
       jobs:
         - name: merge tests
