--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 !/config/bundle/.keep
 /config/bash/.bashhistory
 /config/postgres-data
-collect_coverage/coverage
+collect_coverage/coverage/*
+!collect_coverage/coverage/coverage_report.json
 collect_coverage/input
