--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -44,7 +44,7 @@ blocks:
             - artifact pull workflow result_2.json -d collect_coverage/input/resultset-2.json
             - cd collect_coverage
             - ruby simple_cov_merger.rb
-            - mv coverage ../
+            - cp -r coverage ../
             - cd ..
             - sed -i 's+./../app+app+g' coverage/.resultset.json
             - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
