19 - add rubocop lint with fails to CI

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -31,6 +31,16 @@ blocks:
             - "docker-compose exec memory_app_back rake db:migrate"
             - docker-compose exec memory_app_back rake spec:sliced[1,2]
             - artifact push workflow app/coverage/.resultset.json -d result_2.json
+  - name: "rubocop lint"
+  dependencies: []
+  task:
+    jobs:
+      - name: rubocop lint
+        commands:
+          - checkout
+          - cd app
+          - gem install rubocop
+          - rubocop
   - name: merge tests
     dependencies: ["rspec 1/2", "rspec 2/2"]
     task:
