--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -5,7 +5,7 @@ default: &default
   pool: 5
   username: postgres
   password: postgres
-  host: db_memory_app
+  host: <%= ENV.fetch("DATABASE_URL") %>
 
 development:
   <<: *default
