--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -10,3 +10,4 @@ CMD bundle exec puma -C config/puma.rb
 
 # docker build -f Dockerfile.web -t edimossilva/memory_app_back .
 # docker push edimossilva/memory_app_back
+# docker run -p 3000:3000 --env-file .isolated_docker.env --network="host" edimossilva/memory_app_back
