--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -10,4 +10,6 @@ CMD bundle exec puma -C config/puma.rb
 
 # docker build -f Dockerfile.web -t edimossilva/memory_app_back .
 # docker push edimossilva/memory_app_back
+# docker build -f Dockerfile.web -t edimossilva/memory_app_back:v1 .
+# docker push edimossilva/memory_app_back:v1
 # docker run -p 3000:3000 --env-file .isolated_docker.env --network="host" edimossilva/memory_app_back
