add block to semaphore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,3 +48,4 @@ volumes:
 # docker-compose exec memory_app_back rake db:create
 # docker-compose exec memory_app_back rake db:migrate
 # docker-compose exec memory_app_back rspec
+# docker-compose exec memory_app_vue yarn test:unit
