--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,6 +12,16 @@ blocks:
         - name: rspec 1/2
           commands:
             - checkout
+            - docker-compose build
+            - docker-compose up -d memory_app_vue
+            - 'docker-compose exec memory_app_vue yarn test:unit'
+  - name: rspec 1/2
+    dependencies: []
+    task:
+      jobs:
+        - name: rspec 1/2
+          commands:
+            - checkout
             - touch .env
             - docker-compose build
             - docker-compose up -d
