--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,7 +5,7 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: jest unit
+  - name: frontend unit
     dependencies: []
     task:
       jobs:
@@ -15,7 +15,7 @@ blocks:
             - docker-compose build
             - docker-compose up -d memory_app_vue
             - 'docker-compose exec memory_app_vue yarn test:unit'
-  - name: rspec 1/2
+  - name: backend unit 1/2
     dependencies: []
     task:
       jobs:
@@ -31,7 +31,7 @@ blocks:
             - artifact push workflow backend_rails/coverage/.resultset.json -d result_1.json
       secrets:
         - name: RAILS_MASTER_KEY
-  - name: rspec 2/2
+  - name: backend unit 2/2
     dependencies: []
     task:
       jobs:
@@ -47,7 +47,7 @@ blocks:
             - artifact push workflow backend_rails/coverage/.resultset.json -d result_2.json
       secrets:
         - name: RAILS_MASTER_KEY
-  - name: rubocop lint
+  - name: backend lint
     dependencies: []
     task:
       jobs:
@@ -57,7 +57,7 @@ blocks:
             - cd backend_rails
             - gem install rubocop-rails
             - rubocop
-  - name: merge tests
+  - name: backend merge tests
     dependencies:
       - rspec 1/2
       - rspec 2/2
