--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -84,9 +84,9 @@ blocks:
     skip:
       when: branch != 'master'
     dependencies:
-      - backend rspec 1/2
-      - backend rspec 2/2
-      - backend rubocop lint
+      - backend unit 1/2
+      - backend unit 2/2
+      - backend lint
     task:
       jobs:
         - name: deploy heroku
