--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,7 +5,7 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: frontend unit
+  - name: 'Frontend Unit '
     dependencies: []
     task:
       jobs:
